# quantum-python-lectures

./: .gitignore  .pre-commit-config.yaml  10_Monte-Carlo-Calculating-Pi.ipynb  11_Monte-Carlo-Maxwell-Boltzmann-Distributions.ipynb  1_Reading-and-Writing-Files.ipynb  2_Publication-Quality-Plot.ipynb  3_Lineshape-Comparison-and-Analysis.ipynb  4_Fitting-Data-to-Theory.ipynb  5_Smoothing-and-Binning-Data.ipynb  6_The-Explicit-Euler-Method-and-Order-of-Accuracy.ipynb  7_The-Runge-Kutta-Method-Higher-Order-ODEs-and-Multistep-Methods.ipynb  8_Stiff-Problems-Implicit-Methods-and-Computational-Cost.ipynb  9_Integrating-with-SciPy-and-QuTiP.ipynb  Basics - Documenting your code.ipynb  Basics - Help and information.ipynb  Basics - Introduction to Python.ipynb  CHANGELOG.md  FINAL_STATUS.txt  MODERNIZATION_NOTES.md  README.md  modernize_notebooks.py  pyproject.toml  requirements.txt  test_modernization.py
.ipynb_checkpoints/: 1_Reading-and-Writing-Files-checkpoint.ipynb  2_Publication-Quality-Plot-checkpoint.ipynb  3_Lineshape-Comparison-and-Analysis-checkpoint.ipynb  4_Fitting-Data-to-Theory-checkpoint.ipynb  6_The-Explicit-Euler-Method-and-Order-of-Accuracy-checkpoint.ipynb  7_The-Runge-Kutta-Method-Higher-Order-ODEs-and-Multistep-Methods-checkpoint.ipynb  9_Integrating-with-SciPy-and-QuTiP-checkpoint.ipynb
benchmarks/: BENCHMARK_RESULTS.md  benchmark_ode.py
code/: lineshape_analysis.py  ode_int.py
tests/: __init__.py  test_lineshapes.py  test_ode_int.py
