[project]
name = "quantum-python-lectures"
version = "2.0.0"
description = "Modern Python lectures for quantum physics and scientific computing"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Tommy Ogden", email = "t.p.ogden@durham.ac.uk"},
]
keywords = ["physics", "quantum", "numerical-methods", "scientific-computing", "education"]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipython>=8.12.0",
]

[project.optional-dependencies]
quantum = ["qutip>=4.7.0"]
data = ["pandas>=2.0.0"]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",     # assert is expected in tests
    "PLR2004",  # magic values are OK in tests
    "ANN",      # type annotations not required in tests
    "E402",     # module imports after sys.path manipulation
]
"code/*" = [
    "N806",     # allow uppercase variables in math code (G, V, L, etc.)
    "N803",     # allow single-letter arguments in math functions
]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

# Relax some checks for scientific computing
allow_untyped_calls = true
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = false
